smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-requires-newline.smithy
// Parse error at line 4, column 30 near `use`: Expected a new line before this token
$version: "0.2.0"

use shape smithy.example#Foo use shape smithy.example#Baz
